--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -6,10 +6,27 @@ on:
   pull_request:
     branches: [ "main" ]
 
+env:
+  DJANGO_SETTINGS_MODULE: role_play.pre_settings
+
 jobs:
   build:
 
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:15
+        env:
+          POSTGRES_USER: preuser
+          POSTGRES_PASSWORD: prepwd
+          POSTGRES_DB: role-play
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     strategy:
       max-parallel: 4
       matrix:
