Debug Django secret key generation on GHA

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -45,4 +45,5 @@ jobs:
     - name: Run Tests
       run: |
         echo "DJANGO_SECRET_KEY=$(python -c 'from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())')" >> $GITHUB_ENV
+        echo $DJANGO_SECRET_KEY
         python manage.py test
