--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -42,8 +42,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+    - name: Generate Django secret key
+        echo "DJANGO_SECRET_KEY=$(python -c 'from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())')" >> $GITHUB_ENV
     - name: Run Tests
       run: |
-        echo "DJANGO_SECRET_KEY=$(python -c 'from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())')" >> $GITHUB_ENV
-        echo $DJANGO_SECRET_KEY
         python manage.py test
