--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Django CI
+name: CI
 
 on:
   push:
@@ -10,8 +10,13 @@ env:
   DJANGO_SETTINGS_MODULE: role_play.pre_settings
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: psf/black@stable
   build:
-
+    needs: lint
     runs-on: ubuntu-latest
     services:
       postgres:
@@ -31,7 +36,6 @@ jobs:
       max-parallel: 4
       matrix:
         python-version: ['3.8', '3.9', '3.10', '3.11']
-
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python ${{ matrix.python-version }}
