--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,15 @@
 asgiref==3.6.0
+black==22.12.0
+click==8.1.3
 Django==4.1.3
+flake8==6.0.0
 fontawesomefree==6.2.1
+isort==5.11.4
+mccabe==0.7.0
+mypy-extensions==0.4.3
+pathspec==0.11.0
+platformdirs==2.6.2
 psycopg2-binary==2.9.5
+pycodestyle==2.10.0
+pyflakes==3.0.1
 sqlparse==0.4.3
