--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,23 @@
 asgiref==3.6.0
 black==22.12.0
+cfgv==3.3.1
 click==8.1.3
+distlib==0.3.6
 Django==4.1.5
+filelock==3.9.0
 flake8==6.0.0
 fontawesomefree==6.2.1
+identify==2.5.17
 isort==5.11.4
 mccabe==0.7.0
 mypy-extensions==0.4.3
+nodeenv==1.7.0
 pathspec==0.11.0
 platformdirs==2.6.2
+pre-commit==3.0.4
 psycopg2-binary==2.9.5
 pycodestyle==2.10.0
 pyflakes==3.0.1
+PyYAML==6.0
 sqlparse==0.4.3
+virtualenv==20.17.1
