--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.6.0
+black==23.1.0
 cfgv==3.3.1
 click==8.1.3
 distlib==0.3.6
@@ -9,6 +10,7 @@ identify==2.5.17
 mccabe==0.7.0
 mypy-extensions==0.4.3
 nodeenv==1.7.0
+packaging==23.0
 pathspec==0.11.0
 platformdirs==2.6.2
 pre-commit==3.0.4
