--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,7 +18,7 @@ repos:
   hooks:
   -   id: flake8
 - repo: https://github.com/rtts/djhtml
-  rev: v2.0.0
+  rev: 3.0.6
   hooks:
     - id: djhtml
     - id: djcss
