--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,11 @@ cfgv==3.3.1
 click==8.1.3
 coverage==7.2.1
 distlib==0.3.6
+dj-database-url==1.2.0
 Django==4.1.7
 django-fsm==2.8.1
 filelock==3.9.0
+gunicorn==20.1.0
 identify==2.5.18
 mccabe==0.7.0
 mypy-extensions==1.0.0
@@ -14,10 +16,11 @@ nodeenv==1.7.0
 packaging==23.0
 pathspec==0.11.0
 platformdirs==3.0.0
-pre-commit==3.1.1
+pre-commit==3.2.0
 psycopg2-binary==2.9.5
 pycodestyle==2.10.0
 pyflakes==3.0.1
 PyYAML==6.0
 sqlparse==0.4.3
 virtualenv==20.20.0
+whitenoise==6.4.0
