--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,12 @@ on:
   pull_request:
     branches: [ "main" ]
 
+env:
+  PGUSER: ${{env.PGUSER}}
+  PGPASSWORD: ${{secrets.PGPASSWORD}}
+  PGPORT: ${{env.PGPORT}}
+  PGHOST: ${{env.PGHOST}}
+
 jobs:
   build:
     runs-on: ubuntu-latest
