--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,9 +38,7 @@ jobs:
         echo "DJANGO_SECRET_KEY=$(python -c 'from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())')" >> $GITHUB_ENV
     - name: Run Tests
       run: |
+        echo $PGUSER
         python manage.py test --verbosity=2
       env:
-        PGUSER: ${{env.PGUSER}}
         PGPASSWORD: ${{secrets.PGPASSWORD}}
-        PGPORT: ${{env.PGPORT}}
-        PGHOST: ${{env.PGHOST}}
