--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,8 @@ jobs:
       postgres:
         image: postgres:14
         env:
-          POSTGRES_USER: ${{env.PGUSER}}
-          POSTGRES_PASSWORD: ${{env.PGPASSWORD}}
+          POSTGRES_USER: $PGUSER
+          POSTGRES_PASSWORD: $PGPASSWORD
           POSTGRES_DB: role-play
         ports:
           - 5432:5432
@@ -44,5 +44,4 @@ jobs:
         echo "DJANGO_SECRET_KEY=$(python -c 'from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())')" >> $GITHUB_ENV
     - name: Run Tests
       run: |
-        echo $PGUSER
         python manage.py test --verbosity=2
