--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,8 +19,8 @@ jobs:
       postgres:
         image: postgres:14
         env:
-          POSTGRES_USER: ${{PGUSER}}
-          POSTGRES_PASSWORD: ${{PGPASSWORD}}
+          POSTGRES_USER: ${{env.PGUSER}}
+          POSTGRES_PASSWORD: ${{env.PGPASSWORD}}
           POSTGRES_DB: role-play
         ports:
           - 5432:5432
