Add rpgui folder (it was ignored by git)

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,5 +21,8 @@ repos:
   rev: 3.0.6
   hooks:
     - id: djhtml
+      exclude: .*/rpgui/.*
     - id: djcss
+      exclude: .*/rpgui/.*
     - id: djjs
+      exclude: .*/rpgui/.*
