--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install --user pipenv
-        pipenv install
+        pipenv requirements
+        pip install -r requirements.txt
     - name: Generate Django secret key
       run:
         echo "DJANGO_SECRET_KEY=$(python -c 'from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())')" >> $GITHUB_ENV
