--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install --user pipenv
-        pipenv requirements
+        pipenv lock -r
         pip install -r requirements.txt
     - name: Generate Django secret key
       run:
