Upgrade to Django 4.2

--- a/Pipfile
+++ b/Pipfile
@@ -5,7 +5,7 @@ name = "pypi"
 
 [packages]
 dj-database-url = "*"
-django = "==4.1.7"
+django = "~=4.2"
 django-fsm = "*"
 gunicorn = "*"
 psycopg2-binary = "*"
