Upgrade to psycopg3

--- a/Pipfile
+++ b/Pipfile
@@ -8,8 +8,8 @@ dj-database-url = "*"
 django = "~=4.2"
 django-fsm = "*"
 gunicorn = "*"
-psycopg2-binary = "*"
 whitenoise = "*"
+psycopg = {extras = ["binary"], version = "*"}
 
 [dev-packages]
 black = "*"
