--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ gunicorn = "*"
 whitenoise = "*"
 psycopg = {extras = ["binary"], version = "*"}
 django-coverage-plugin = "*"
+channels = "*"
 
 [dev-packages]
 black = "*"
