Add django channels

--- a/Pipfile
+++ b/Pipfile
@@ -4,12 +4,12 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+channels = "*"
 dj-database-url = "*"
 django = "~=4.2"
 django-fsm = "*"
 gunicorn = "*"
 psycopg = {extras = ["binary"], version = "*"}
-whitenoise = "*"
 
 [dev-packages]
 black = "*"
