Implement minimal chat server

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ whitenoise = "*"
 psycopg = {extras = ["binary"], version = "*"}
 django-coverage-plugin = "*"
 channels = "*"
+daphne = "*"
 
 [dev-packages]
 black = "*"
