--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,7 @@ env:
   PGPASSWORD: ${{secrets.PGPASSWORD}}
   PGHOST: 127.0.0.1
   PGPORT: 5432
+  DJANGO_SECRET_KEY: ${{secrets.DJANGO_SECRET_KEY}}
 
 jobs:
   build:
@@ -40,9 +41,6 @@ jobs:
         python -m pip install --upgrade pip
         pip install --user pipenv
         pipenv sync
-    - name: Generate Django secret key
-      run:
-        pipenv run echo "DJANGO_SECRET_KEY=$(pipenv run python -c 'from django.core.management.utils import get_random_secret_key; print(get_random_secret_key())')" >> $GITHUB_ENV
     - name: Run Tests
       run: |
         pipenv run python manage.py test --verbosity=2
