--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ django = "~=4.2"
 django-fsm = "*"
 gunicorn = "*"
 psycopg = {extras = ["binary"], version = "*"}
+whitenoise = "*"
 
 [dev-packages]
 black = "*"
