Install django-debug-toolbar

--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ whitenoise = "*"
 black = "*"
 coverage = "*"
 django-coverage-plugin = "*"
+django-debug-toolbar = "*"
 pre-commit = "*"
 
 [requires]
