--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install --user pipenv
-        pipenv sync
+        pipenv sync --dev
     - name: Run Tests
       run: |
         pipenv run python manage.py test --verbosity=2
