--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ django = "~=4.2"
 django-fsm = "*"
 gunicorn = "*"
 psycopg = {extras = ["binary"], version = "*"}
+redis = "*"
 whitenoise = "*"
 
 [dev-packages]
