Integrate django-eventstream

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,4 +25,4 @@ repos:
     - id: djcss
       exclude: .*/rpgui/.*
     - id: djjs
-      exclude: .*/rpgui/.*
+      exclude: .*/rpgui/.*|.*/js/.*
