--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,9 +49,8 @@ jobs:
         python-version: '3.11'
     - name: Install Dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install --user pipenv
-        pipenv sync --dev
+        curl -sSL https://install.python-poetry.org | python3 -
+        poetry install --without=dev
     - name: Run Tests
       run: |
-        pipenv run python manage.py test --verbosity=2
+        poetry run python manage.py test --verbosity=2
