--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ black = "*"
 coverage = "*"
 django-coverage-plugin = "*"
 django-debug-toolbar = "*"
+email-validator = "*"
 pre-commit = "*"
 
 [build-system]
