--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,7 +51,7 @@ jobs:
     - name: Install Dependencies
       run: |
         curl -sSL https://install.python-poetry.org | python3 -
-        poetry install --without=dev
+        poetry install
     - name: Run Tests
       run: |
         poetry run python manage.py test --verbosity=2
