Replace random dice launch by one from dice lib

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ async-timeout = "*"
 channels = "~=3.0"
 channels-redis = "*"
 daphne = "*"
+dice = "*"
 dj-database-url = "*"
 django = "~=4.2"
 django-eventstream = "*"
