--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,3 +26,7 @@ repos:
       exclude: .*/rpgui/.*
     - id: djjs
       exclude: .*/rpgui/.*|.*/js/.*
+- repo: https://github.com/codespell-project/codespell
+  rev: v2.2.4
+  hooks:
+  - id: codespell
