--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ packages = [{include = "role_play"}]
 [tool.poetry.dependencies]
 python = "^3.11"
 async-timeout = "*"
-channels = "~=3.0"
+channels = "*"
 channels-redis = "*"
 daphne = "*"
 dice = "*"
