feat: Increase hit dice per level

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,4 @@
 [flake8]
 max-line-length = 88
-extend-ignore = E501
+extend-ignore = E501, W605
 exclude = role_play/asgi.py, role_play/urls.py, role_play/settings/*
