--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,4 +56,4 @@ jobs:
         poetry install
     - name: Run Tests
       run: |
-        poetry run python manage.py test --verbosity=2
+        poetry run invoke test.run --verbose
