--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ daphne = "*"
 dice = "*"
 dj-database-url = "*"
 django = "~=4.2"
+django-extensions = "*"
 django-fsm = "*"
 email-validator = "*"
 gunicorn = "*"
