--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,12 +39,22 @@ whitenoise = "*"
 
 [tool.poetry.group.dev.dependencies]
 black = "*"
+commitizen = "*"
 coverage = "*"
 django-coverage-plugin = "*"
 django-debug-toolbar = "*"
 factory_boy = "*"
 faker = "*"
 pre-commit = "*"
+
+
+[tool.commitizen]
+name = "cz_conventional_commits"
+tag_format = "v$version"
+version_scheme = "semver"
+version_provider = "poetry"
+update_changelog_on_bump = true
+major_version_zero = true
 
 [build-system]
 requires = ["poetry-core"]
