--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,7 @@ repos:
   -   id: end-of-file-fixer
   -   id: trailing-whitespace
 - repo: https://github.com/psf/black
-  rev: 23.9.0
+  rev: 23.9.1
   hooks:
   -   id: black
 - repo: https://github.com/pycqa/isort
@@ -30,3 +30,9 @@ repos:
   rev: v2.2.5
   hooks:
   - id: codespell
+- repo: https://github.com/commitizen-tools/commitizen
+  rev: 3.10.0
+  hooks:
+    - id: commitizen
+    - id: commitizen-branch
+      stages: [push]
