feat: Implement first Celery task

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ packages = [{include = "role_play"}]
 [tool.poetry.dependencies]
 python = "^3.11"
 async-timeout = "*"
+celery = "*"
 channels = "*"
 channels-redis = "*"
 daphne = "*"
