test: Run tests in parallel

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ factory_boy = "*"
 faker = "*"
 pre-commit = "*"
 pytest-django = "*"
+pytest-xdist = "*"
 
 [tool.commitizen]
 name = "cz_conventional_commits"
