--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 services:
   redis:
-    image: "redis:6-alpine"
+    image: "redis:alpine"
     restart: always
     ports:
       - "6379:6379"
 
   postgres:
-    image: "postgres:13-alpine"
+    image: "postgres:alpine"
     restart: always
     environment:
       - POSTGRES_USER=${PGUSER}
