--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
           --health-timeout 5s
           --health-retries 5
       postgres:
-        image: postgres:14
+        image: postgres:latest
         env:
           POSTGRES_USER: ${{env.PGUSER}}
           POSTGRES_PASSWORD: ${{env.PGPASSWORD}}
