--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ django-debug-toolbar = "*"
 factory_boy = "*"
 faker = "*"
 pre-commit = "*"
+pytest-asyncio = "*"
 pytest-django = "*"
 pytest-xdist = "*"
 
