test: Feature/migrate to pytest (#151)
* build: upgrade libs

* test: migrate dice tests to pytest

* test(character): migrate CharacterDetailView tests

* test(character): migrate CharacterCreateView tests

* test(character): migrate CharacterModel tests

* test(character): move fixtures at their correct folders

* test(master): migrate CampaignDetailView tests

* test(master): migrate CampaignListView tests

* test(master): migrate CampaignCreateView tests

* test(master): migrate CampaignUpdateView tests

* test(master): migrate CampaignModel tests

* test(game): migrate forms tests

* test(game): migrate models tests

* test(game): migrate utils tests

* test(game): migrate common views tests

* test(game): migrate master views tests

* test(game): migrate consumers tests

* style(game): fix typo

* test(master): fix flaky test

* test: improve initial data loading

* test(character): Move create_characters() fixture

* test: remove password creation (passwords are not used in tests)

* test: remove pytest-xdist

* test: remove unnecessary fixture parameters

* test(game): add missing assert

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,8 +43,8 @@ django-debug-toolbar = "*"
 factory_boy = "*"
 faker = "*"
 pre-commit = "*"
+pytest-asyncio = "*"
 pytest-django = "*"
-pytest-xdist = "*"
 
 [tool.commitizen]
 name = "cz_conventional_commits"
