--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,11 +6,11 @@ repos:
   -   id: end-of-file-fixer
   -   id: trailing-whitespace
 - repo: https://github.com/psf/black
-  rev: 23.10.0
+  rev: 23.12.1
   hooks:
   -   id: black
 - repo: https://github.com/pycqa/isort
-  rev: 5.12.0
+  rev: 5.13.2
   hooks:
   - id: isort
 - repo: https://github.com/pycqa/flake8
@@ -31,7 +31,7 @@ repos:
   hooks:
   - id: codespell
 - repo: https://github.com/commitizen-tools/commitizen
-  rev: 3.12.0
+  rev: v3.13.0
   hooks:
     - id: commitizen
     - id: commitizen-branch
